--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,3 +83,8 @@ label {
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef', endColorstr='#ff81bfde', GradientType=0);
 }
+.modal-header {
+    background-color: #2780e3;
+    border-color: #1967be;
+    color: white;
+}
