--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,12 @@ img {
     color: grey;
     margin-bottom: 0;
 }
+.big {
+    font-size: 13pt;
+}
+.bold {
+    font-weight: bold;
+}
 #description {
     font-size: 12pt;
 }
