--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,18 @@
-/* 
+/*
  * Copyright (C) 2017 Eliastik (eliastiksofts.com)
- * 
+ *
  * This file is part of "Denis Brogniart – Ah !".
- * 
+ *
  * "Denis Brogniart – Ah !" is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
- * 
+ *
  * "Denis Brogniart – Ah !" is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with "Denis Brogniart – Ah !".  If not, see <http://www.gnu.org/licenses/>.
  */
@@ -85,6 +85,10 @@ div.checkbox {
 }
 label {
     padding: 0 !important;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 .link-contrasted-red {
     color: #00008b;
@@ -109,6 +113,20 @@ label {
     background-image: linear-gradient(to bottom, #89cdef 0%, #81bfde 100%);
     background-repeat: repeat-x;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef', endColorstr='#ff81bfde', GradientType=0);
+}
+.slider-tick {
+    background-image: -webkit-linear-gradient(top, #E1E1E1 0%, #DCDCDC 100%);
+    background-image: -o-linear-gradient(top, #E1E1E1 0%, #DCDCDC 100%);
+    background-image: linear-gradient(to bottom, #E1E1E1 0%, #DCDCDC 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe6e6e6', endColorstr='#ffe1e1e1', GradientType=0);
+}
+.slider-track {
+    background-image: -webkit-linear-gradient(top, #ebebeb 0%, #e6e6e6 100%);
+    background-image: -o-linear-gradient(top, #ebebeb 0%, #e6e6e6 100%);
+    background-image: linear-gradient(to bottom, #ebebeb 0%, #e6e6e6 100%);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb', endColorstr='#ffe6e6e6', GradientType=0);
 }
 .modal-header {
     background-color: #2780e3;
