--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,24 @@
  * You should have received a copy of the GNU General Public License
  * along with "Denis Brogniart – Ah !".  If not, see <http://www.gnu.org/licenses/>.
  */
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 300;
+    src: local('Source Sans Pro Light'), local('SourceSansPro-Light'), url(../fonts/SourceSansPro-Light.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Source Sans Pro Regular'), local('SourceSansPro-Regular'), url(../fonts/SourceSansPro-Regular.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Source Sans Pro';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Source Sans Pro Bold'), local('SourceSansPro-Bold'), url(../fonts/SourceSansPro-Bold.ttf) format('truetype');
+}
 body {
     user-select: none;
     -webkit-user-select: none;
@@ -77,6 +95,9 @@ img {
 }
 .border-right {
     border-right: 1px solid lightgrey;
+}
+#containerPrincipal {
+    margin-top: 65px;
 }
 /* https://codepen.io/jamesbarnett/pen/yILjk */
 input[type=checkbox] {
